<resources>
    <string name="app_name">IM</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="Version">版本信息：1.00.86</string>
    <string name="team_name">开发团队:移动丁真</string>
    <string name="contact_address">联系地址:英华五618</string>
    <string name="license_apache_license_2_0">版权:Apache License 2.0</string>
    <string name="red_pig">朱鸿宇</string>
    <string name="job_name">职位名称</string>
    <string name="job_description">工作描述</string>
    <string name="need_avatar">需要头像</string>
    <string name="self_introduction">个人简介</string>
    <string name="Educational_qualifications">学历</string>
    <string name="user_name">名称</string>
    <string name="job">职位</string>
    <string name="save">保存</string>
    <string name="联系方式">联系方式</string>
    <string name="公司简介">公司简介</string>
    <string name="公司地址">公司地址</string>
    <string name="公司名称">公司名称</string>
</resources>