<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- 保存数据按钮 -->
    <Button
        android:id="@+id/btn_save_hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save_hr"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 公司Logo -->
            <ImageView
                android:id="@+id/iv_company_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/need_avatar"
                android:src="@drawable/hr"
                android:focusable="true" />

            <!-- 公司名称 -->
            <EditText
                android:id="@+id/et_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/公司名称"
                android:textSize="18sp"
                android:layout_marginTop="8dp" />

            <!-- 公司地址 -->
            <EditText
                android:id="@+id/et_company_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/公司地址"
                android:textSize="18sp"
                android:layout_marginTop="8dp" />


            <!-- 公司简介 -->
            <EditText
                android:id="@+id/et_company_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/公司简介"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <!-- 公司联系方式 -->
            <EditText
                android:id="@+id/et_company_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/联系方式"
                android:textSize="18sp"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
