<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 用户头像 -->
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/red_pig"
            android:contentDescription="@string/need_avatar" />

        <!-- 用户名 -->
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/red_pig"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <!-- 用户职位 -->
        <TextView
            android:id="@+id/tv_job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <!-- 分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <!-- 个人简介 -->
        <TextView
            android:id="@+id/tv_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/self_introduction"
            android:textSize="16sp" />

        <!-- 学历 -->
        <TextView
            android:id="@+id/tv_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Educational_qualifications"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <!-- 工作经历列表 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_experience" />

    </LinearLayout>
</ScrollView>
